ghc-6.2/hslibs/object-io/OSWindows/Windows_C_12/cCCallWindows_121.h

#include <windows.h>
#include "util_121.h"

extern void WinInvalidateWindow (int hwnd);
extern void WinInvalidateRect (int hwnd, int left, int top, int right, int bottom);
extern void WinValidateRect (int hwnd, int left, int top, int right, int bottom);
extern void WinValidateRgn (int hwnd, HRGN rgn);

/*	Win(M/S)DIClientToOuterSizeDims returns the width and height needed to add/subtract
	from the client/outer size to obtain the outer/client size.
	These values must be the same as used by W95AdjustClean(M/S)DIWindowDimensions!
*/
extern void WinMDIClientToOuterSizeDims (int styleFlags, int *dw, int *dh);
extern void WinSDIClientToOuterSizeDims (int styleFlags, int *dw, int *dh);

/*	Set and get the GWL_USERDATA of a windowhandle.
*/
extern void SetGWL_USERDATA (LONG data, HWND hwnd);
extern LONG GetGWL_USERDATA (HWND hwnd);

/*	UpdateWindowScrollbars updates any window scrollbars and non-client area if present.
*/
extern void UpdateWindowScrollbars (HWND hwnd);

/*	Access procedures to dimensions:
*/
extern int WinScreenYSize ();
extern int WinScreenXSize ();
extern void WinMinimumWinSize (int *mx, int *my);
extern void WinScrollbarSize (int *width, int *height);
extern void WinMaxFixedWindowSize (int *mx, int *my);
extern void WinMaxScrollWindowSize (int *mx, int *my);