ghc-6.2/hslibs/object-io/OSWindows/Windows_C_12/cCCallSystem_121.h

#include "intrface_121.h"
#include "util_121.h"

extern void WinBeep ();
extern void WinGetTime (int*,int*,int*);
extern void WinGetDate (int*,int*,int*,int*);
extern void WinWait (int);
extern int  WinGetBlinkTime ();
extern int  WinGetTickCount ();
extern BOOL WinPlaySound (char *);